// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSONSchemaRenderer should handle nested objects 1`] = `
<dl
  className="theme-json-schema-renderer json-schema-renderer"
>
  <div
    className="theme-object object-renderer-a"
  >
    <h2>
      a
    </h2>
    <div>
      <div
        className="text-renderer text-renderer-b"
      >
        <dt>
          b
        </dt>
        <dd>
          test
        </dd>
      </div>
    </div>
  </div>
</dl>
`;

exports[`JSONSchemaRenderer should render 1`] = `
<dl
  className="theme-json-schema-renderer json-schema-renderer"
/>
`;

exports[`JSONSchemaRenderer should render arrays 1`] = `
<dl
  className="theme-json-schema-renderer json-schema-renderer"
>
  <dt>
    test string
  </dt>
  <dd
    className="theme-array-value"
  >
    b
  </dd>
  <dd
    className="theme-array-value"
  >
    d
  </dd>
  <dd
    className="theme-array-value"
  >
    f
  </dd>
</dl>
`;

exports[`JSONSchemaRenderer should render strings and integers 1`] = `
<dl
  className="theme-json-schema-renderer json-schema-renderer"
>
  <dt>
    test string
  </dt>
  <dd>
    A big a
  </dd>
  <dt>
    test integer
  </dt>
  <dd>
    42
  </dd>
</dl>
`;
